syntax = "proto3";
import "google/protobuf/timestamp.proto";

package pb;

option go_package = "lemfi/simplebank/pb";

message LoginUserRequest {
    string username = 1;
    string password = 2;
}

message LoginUserResponse {
    string access_token = 1;    
    string refresh_token = 2;
    google.protobuf.Timestamp access_token_expires_at = 3;
    google.protobuf.Timestamp refresh_token_expires_at = 4;
}



